overflow of animation fixed

--- a/src/app/landing/offer/offer.component.scss
+++ b/src/app/landing/offer/offer.component.scss
@@ -8,6 +8,7 @@ $font-radius: 0.5rem;
   text-align: center;
   padding: 40px 100px 40px 100px;
   flex-direction: column;
+  overflow: hidden;
 }
 .material-symbols-outlined {
   font-size: 60px;
